# studioos

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  slack-app-manifest.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_core_schema.py  0002_memory_and_kpi.py  0003_event_dlq.py  0004_tool_registry.py  0005_budget_approvals.py  0006_agent_schedule.py
docs/: PLAN.md
studioos/: __init__.py  cli.py  config.py  db.py  logging.py  models.py  slack_routing.py  status.py
studioos/api/: __init__.py  dashboard.py  main.py  slack_events.py  telegram_webhook.py
studioos/approvals/: __init__.py  escalation.py  store.py
studioos/budget/: __init__.py  store.py
studioos/bus/: __init__.py  base.py  codec.py  factory.py  inproc.py  redis_backend.py
studioos/events/: __init__.py  envelope.py  (+5 more)
tests/: conftest.py  test_admanager_tiers.py  test_analyst_scoring.py  test_app_build_schemas.py  test_app_event_schemas.py  test_app_marketing.py  test_app_qa.py  test_app_studio_qa.py  test_crosslister_autolist.py  test_dev_exec.py  test_ebay_create_draft.py  test_escalation_matrix.py  test_growth_exec.py  test_growth_intel.py  test_hub_tools.py  test_milestone1.py  test_milestone10_dynamic_watchlist.py  test_milestone2_memory.py  test_milestone3_bus.py  test_milestone4_tools.py  test_milestone5_budget_approvals.py  test_milestone6_amz_analyst.py  test_milestone6_amz_monitor.py  test_milestone7_scheduler.py  test_milestone9_status.py  test_outcome_checker.py  test_personas.py  test_pricer_gates.py  test_qa_diagnose.py  test_react_conversation.py  test_repricer_live.py  test_research_tools.py  test_slack_routing.py  test_slack_webhook.py
(+83 files in other folders)
